[package]
name = "caldyn"
version = "0.4.0"
authors = ["Luthaf <luthaf@luthaf.fr>"]
license = "MIT/Apache-2.0"
readme = "README.md"
repository = "https://github.com/Luthaf/caldyn"
homepage = "https://github.com/Luthaf/caldyn"
documentation = "https://docs.rs/caldyn/"
description = """
Dynamic evaluation of mathematical expressions
"""

[dependencies]
lazy_static = "0.2"

[dev-dependencies]
rustyline = "1"
shellexpand = "1"
